--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(cogniverse)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(cogniverse main.cpp glad.c classes/Shader/Shader.h classes/Shader/Shader.cpp classes/Window/Window.cpp classes/Window/Window.h)
+add_executable(cogniverse main.cpp glad.c classes/Shader/Shader.h classes/Shader/Shader.cpp classes/Window/Window.cpp classes/Window/Window.h renderables/Triangle.h)
 
 find_package(OpenGL REQUIRED)
 #include glfw3
